2003-05-27  Earnie Boyd  <earnie@users.sf.net>

	* docs.shtml: Add Thomas Messenger's tutorial about compiled html help.

2003-03-16  Nathan Fisher <natbobc@users.sf.net>
	
	* mingwfaq.shtml: Fix Makefile comments.
	Add GJC and GPC to the languages section.
	Change --shared to -shared in JNI DLL section.

2003-03-15  Nathan Fisher <natbobc@users.sf.net>

	* mingwfaq.shtml: Add Makefile section.
	Add JNI DLL section.
	Add Supported Languages section.
	
2003-03-01  Nathan Fisher <natbobc@users.sf.net>

	* links.shtml: Fix bug report #694983.
	Thanks to Maciej.

2003-02-18  Nathan Fisher <natbobc@users.sf.net>

	* bugs.sh: Add to repository.

2003-02-18  Nathan Fisher <natbobc@users.sf.net>

	* bugs.shtml: Change include/_win32.h to include/win32.h.

2003-02-18  Nathan Fisher <natbobc@users.sf.net>

	* download.shtml: Add package installation instructions.
	Add detailed post-MSYS MinGW normalization instructions.
	* bugs.shtml: Add request for OS info.

2003-02-17  Nathan Fisher <natbobc@users.sf.net>

	* bugs.shtml: Update version info retrieval.
	* mingw.css:	Add underline class to span.
	 
2003-02-12  Nathan Fisher <natbobc@users.sf.net>

	* bugs.shtml: Add info for contacting package maintainers.

2003-02-12  Nathan Fisher <natbobc@users.sf.net>

	* MINGW-MONTHLY-USERS.txt: Add reference to mingw-utils.

2003-02-10  Earnie Boyd  <earnie@users.sf.net>

	* ssi/release.html: Modify versions for bison snapshot.

2003-02-10  Earnie Boyd  <earnie@users.sf.net>

	* ssi/release.html: Modify versions for mingw-runtime, w32api and GCC.

2003-02-04  Nathan Fisher <natbobc@users.sf.net>

	* mingwfaq.shtml: Add CSS and HTML 4.01 compliant tags.

2003-02-04  Nathan Fisher <natbobc@users.sf.net>

	* mingwfaq.shtml: Converted tabs to '  '.
	Add missing hr.

2003-02-04  Nathan Fisher <natbobc@users.sf.net>

	* mingwfaq.shtml: Correct the href.
	Thanks to James Wilson (fat_hot at users sf net)
	
2003-02-04  Nathan Fisher <natbobc@users.sf.net>
